# currency-bot

./: .gitignore  ChangeLog.md  Dockerfile  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
env/: app.env.example
src/: main.py  start.sh
src/currency_bot/: app.py  bot.py
src/currency_bot/bot_router/: commands.py
src/currency_bot/core/: settings.py
src/currency_bot/core/providers/: services_provider.py  setup.py  use_cases_provider.py
src/currency_bot/domain/use_cases/: get_current_rates.py
src/currency_bot/resources/: urls.py
src/currency_bot/services/: binance_listener.py  exchange_rate_listener.py  telegram_message_builder.py
src/currency_bot/services/abc/: i_listener.py
