[project]
name = "currency-bot"
version = "0.2.0"
description = "Currency Bot"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "dishka>=1.7.2",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
